chore/style: prettier

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -20,7 +20,7 @@ $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
 
-$main-color:rgb(155,0,0);
+$main-color: rgb(155, 0, 0);
 
 /* 文字基本颜色 */
 $uni-text-color: #333; // 基本色
@@ -78,4 +78,4 @@ $uni-color-paragraph: #3f536e; // 文章段落颜色
 $uni-font-size-paragraph: 15px;
 
 /* 字体 */
-$base-font-family:cursive;
+$base-font-family: cursive;
