[feat]:完成主界面的大致编写，完成了咨询界面的基本搭建

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -22,6 +22,9 @@ $uni-color-error: #dd524d;
 
 $main-color: rgb(155, 0, 0);
 
+$transparent-black:rgba(0,0,0,0.4);
+$background-color:rgb(240,240,240);
+
 /* 文字基本颜色 */
 $uni-text-color: #333; // 基本色
 $uni-text-color-inverse: #fff; // 反色
